# Model-loader

./: .gitignore  CMakeLists.txt  Notes.txt  README.md
Dependencies/GLFW/: glfw3.h
Dependencies/Metal/: MTLDepthStencil.hpp
build-xcode/: CMakeCache.txt  cmake_install.cmake
build-xcode/CMakeScripts/: ReRunCMake.make
build-xcode/Debug/: Model_Viewer  Model_Viewer_Tests
build-xcode/Model_Viewer.xcodeproj/: project.pbxproj
build-xcode/Model_Viewer.xcodeproj/project.xcworkspace/xcuserdata/haydenchalin.xcuserdatad/: UserInterfaceState.xcuserstate
build-xcode/Model_Viewer.xcodeproj/xcuserdata/haydenchalin.xcuserdatad/xcschemes/: xcschememanagement.plist
src/: Camera.cpp  Camera.h  Controller.cpp  Controller.h  Model.cpp  Model.h  MyAppDelegate.h  MyAppDelegate.mm  MyMTKViewDelegate.h  MyMTKViewDelegate.mm  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  Window.cpp  Window.h  main.cpp
src/assets/: CC2.mtl  CC3.mtl  coloredCube.mtl  fox.mtl  key.mtl  lowpoly-house.mtl  op_scene.mtl  scene_test.mtl
src/backend/: ModelBridge.hpp  ModelBridge.mm  glfw_adaptor.h  glfw_adaptor.mm
src/common/: Transform.cpp  common.h  vec4.h
src/common/BroMath/: Transform.cpp  Transform.h  vec4.h
src/shaders/: readShaderFile.cpp  readShaderFile.h  shaders.metal
tests/: test_camera.cpp  test_main.cpp
